# portfolio-manager-wrapper

./: .gitignore  PortfolioManager_API_Config.ini.example  README.md  pyproject.toml
portfolio_manager_wrapper/: __init__.py  async_auth.py  async_client.py  auth.py  config.py  exceptions.py  sync.py
tests/: conftest.py  test_async.py  test_auth.py  test_export.py  test_holdings.py  test_portfolios.py  test_transactions.py  test_version.py
